--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,17 @@
 # set servr port to 8090
 server.port=8090
 
+# configure mongodb url  connection
+spring.data.mongodb.uri=mongodb://localhost:27017/ctsdb
+
 # set server context path to /api/v1
 server.servlet.context-path=/api/gaana
 
 # set GAANA_API_URL as https://gaana.com/apiv2?type=miscTrendingSongs
 GAANA_API_URL=https://gaana.com/apiv2?type=miscTrendingSongs
+
+# set BACKUP_API_URL as "https://raw.githubusercontent.com/ergauravsingh/data/master/music_app/backup_response.json"
+BACKUP_API_URL=https://raw.githubusercontent.com/ergauravsingh/data/master/music_app/backup_response.json
+
+# set jwt signing key as cognizant
+jwt.signing.key=cognizant
