--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
 			<artifactId>json</artifactId>
 			<version>20210307</version>
 		</dependency>
+		<!-- add  jwt  -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<!-- add  jaxb-api -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
